// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`post doesn't exist in source.post 1`] = `
Object {
  "/the-beauties-of-gullfoss/": Object {
    "id": 60,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
}
`;

exports[`post exists in source.post 1`] = `
Object {
  "/the-beauties-of-gullfoss/": Object {
    "id": 60,
    "isFetching": false,
    "isPost": true,
    "isPostType": true,
    "isReady": true,
    "type": "post",
  },
}
`;

exports[`post throws an error if it doesn't exist 1`] = `
Object {
  "/the-beauties-of-gullfoss/": Object {
    "is404": true,
    "isFetching": false,
  },
}
`;
